[tool.poetry]
name = "metroid"
version = "1.0.0"  # Remember to change in __init__.py as well
description = "Metroid - Metro for Django"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-servicebus = "^7.0.1"
Django = "^3.1.1"
celery = "^5.0.0"
django-guid = "^3.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
python-decouple = "^3.4"
redis = "^3.5.3"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.1"
requests-mock = "^1.8.0"
pytest-freezegun = "^0.4.2"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["metroid"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'DJANGO',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER'
]
known_django = ['django']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'demoproj.settings'
log_cli_format = '%(levelname)s %(asctime)s [%(correlation_id)s] %(name)s %(message)s'
log_cli = true
log_cli_level = 'DEBUG'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
